--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ table { border-collapse:collapse; }
 
 /*  header  */
 h1 { position: absolute; font-size: 38px; left: 85px; top: 70px;}
-.gnb { position: absolute; z-index: 1000;  height: 30px; left: 874px; top: 74px;}
+.gnb { position: absolute; z-index: 1000;  height: 30px; left: 874px; top: 74px; text-shadow: 0 2px 2px gray;}
 .gnb li { float:left; }
 .gnb li:first-child {transition: 0.3s;}
 .gnb li:first-child:hover {opacity: 0.7;}
@@ -52,7 +52,7 @@ h1 { position: absolute; font-size: 38px; left: 85px; top: 70px;}
 .gnb li a { color: #FFFFFF; font-weight: 600; font-size: 18px; line-height: 27px; text-decoration: none; }
 .visual { position: absolute;  top: 50px; right: 0; }
 
-.title { position: absolute;left: 105px; top: 226px; font-size: 64px; font-weight: 700; }
+.title { position: absolute;left: 105px; top: 226px; font-size: 64px; font-weight: 700; text-shadow: 0 2px 5px gray; }
 .headtext { position: absolute; left: 105px; top: 497px; line-height: 28px; }
 .button1 {  float: left;}
 .button1 .bt1 { transition: 0.3s; position: absolute; left: 60px; top: 593px; }
