--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ table { border-collapse:collapse; }
 #footer { position: relative; margin: 0 auto; width: 1170px; height: 227px; margin-top: 140px; margin-bottom:40px; }
 
 /*  header  */
-h1 { position: absolute; font-size: 38px; left: 85px; top: 70px;}
+h1 { position: absolute; font-size: 25px; font-weight: 600; left: 85px; top: 70px;  text-shadow: 0 3px 5px gray;}
+h1 a {  color:#40A2D5 ; text-decoration: none; }
 .gnb { position: absolute; z-index: 1000;  height: 30px; left: 874px; top: 74px; text-shadow: 0 2px 2px gray;}
 .gnb li { float:left; }
 .gnb li:first-child {transition: 0.3s;}
@@ -207,8 +208,7 @@ h1 { position: absolute; font-size: 38px; left: 85px; top: 70px;}
 <body>
 <header id="header">
     <div class="inner">
-        <h1><a href="index.html"><img src="images/LOGO/Logo.png" alt="CONSTRUCTION LOGO"></a>
-        </h1>
+        <h1><a href="index.html">CONSTRUCTION</a></h1>
 
         <nav class="gnb">
             <ul>
