--- a/index.html
+++ b/index.html
@@ -79,56 +79,65 @@
 
         <h2>Our Best Engineers</h2>
 
+        <h3>Blessing welcomed ladyship she met humoured sir breeding her. Six<br> curiosity day assurance bed necessary.</h3>
+
     <div class="engineer1">
-        <div class="star1">
-            <img src="images/OurBestEngineers/Group 596.png" alt="star">
+        <button class="star">
+            <img src="asset/images/star.png" alt="star">
+        </button>
+        <div class="burgerbtn">
+            <div class="list1"></div>
+            <div class="list2"></div>
+            <div class="list3"></div>
         </div>
-        <div class="list1">
-            <img src="images/OurBestEngineers/Group.png" alt="list">
-        </div>
+
         <div class="portrait1">
-            <img src="images/OurBestEngineers/Ellipse 752.png" alt="employee1">
+            <img src="asset/images/chrisevans.png" alt="employee1">
         </div>
         <div class="info1">
-            <span class="name">Chris Evans</span>
-            <span class="address">Michigan, TX</span>
-            <span class="phone">989-653-2986</span>
+            <span class="name" style="font-weight: 500;">Chris Evans</span><br>
+            <span class="address" style="font-size: 12px; color: #6B6B6B;">Michigan, TX</span><br><br>
+            <span class="phone" style="color: #6B6B6B;">989-653-2986</span><br><br>
             <a href="#"><span class="email" style="color: rgba(64, 162, 213, 1);" >ChrisEvans@const.com</span></a>
         </div>
     </div>
 
     <div class="engineer2">
-        <div class="star2">
-            <img src="images/OurBestEngineers/Group 596.png" alt="star">
-        </div>
-        <div class="list2">
-            <img src="images/OurBestEngineers/Group-1.png" alt="list">
+        <button class="star">
+            <img src="asset/images/star.png" alt="star">
+        </button>
+        <div class="burgerbtn">
+            <div class="list1"></div>
+            <div class="list2"></div>
+            <div class="list3"></div>
         </div>
         <div class="portrait2">
-            <img src="images/OurBestEngineers/Ellipse 752-1.png" alt="employee2">
+            <img src="asset/images/alisonkiara.png" alt="employee2">
         </div>
         <div class="info2">
-            <span class="name">Alison Kiara</span>
-            <span class="address">Michigan, TX</span>
-            <span class="phone">989-653-2986</span>
+            <span class="name" style="font-weight: 500;">Alison Kiara</span><br>
+            <span class="address" style="font-size: 12px; color: #6B6B6B;">Michigan, TX</span><br><br>
+            <span class="phone" style="color: #6B6B6B;">989-653-2986</span><br><br>
             <a href="#"><span class="email" style="color: rgba(64, 162, 213, 1);" >alisonkiara@const.com</span></a>
         </div>
     </div>
 
     <div class="engineer3">
-        <div class="star3">
-            <img src="images/OurBestEngineers/Group 596.png" alt="star">
-        </div>
-        <div class="list3">
-            <img src="images/OurBestEngineers/Group-2.png" alt="list">
+        <button class="star">
+            <img src="asset/images/star.png" alt="star">
+        </button>
+        <div class="burgerbtn">
+            <div class="list1"></div>
+            <div class="list2"></div>
+            <div class="list3"></div>
         </div>
         <div class="portrait3">
-            <img src="images/OurBestEngineers/Ellipse 752-2.png" alt="employee3">
+            <img src="asset/images/adamgates.png" alt="employee3">
         </div>
         <div class="info3">
-            <span class="name">Adam Gates</span>
-            <span class="address">Michigan, TX</span>
-            <span class="phone">989-653-2986</span>
+            <span class="name" style="font-weight: 500;">Adam Gates</span><br>
+            <span class="address" style="font-size: 12px; color: #6B6B6B;">Michigan, TX</span><br><br>
+            <span class="phone" style="color: #6B6B6B;">989-653-2986</span><br><br>
             <a href="#"><span class="email" style="color: rgba(64, 162, 213, 1);" >adamgates@const.com</span></a>
         </div>
     </div>
@@ -207,6 +216,27 @@
 
     <h3>Blessing welcomed ladyship she met humoured sir breeding her. Six</br>curiosity day assurance bed necessary.</h3>
 
+    <ul style="overflow-y: scroll; overflow-x: hidden;">
+        <li class="UYC1">
+            <span>Unleash Your Creativity</span>
+            <p>Nine for Mortal Men, doomed to die, One for</p>
+        </li>
+        <li class="UYC2">
+            <span>Unleash Your Creativity</span>
+            <p>Nine for Mortal Men, doomed to die, One for</p>
+            <a href="#">Read more</a>
+        </li>
+        <li class="UYC3">
+            <span>Unleash Your Creativity</span>
+            <p>Nine for Mortal Men, doomed to die, One for</p>
+        </li>
+        <li class="UYC4">
+            <span>Unleash Your Creativity</span>
+            <p>Nine for Mortal Men, doomed to die, One for</p>
+            <a href="#">Read more</a>
+        </li>
+    </ul>
+
 </section>
 <!-- Subscribe to our newsletter -->
 <section id="newsletter">
@@ -215,7 +245,7 @@
     <h3>Age sold some full like rich new. Amounted repeated as</br>believed in confined juvenile.</h3>
 
     <div class="newsletterbtn">
-        <a href="#"><img src="images/ContactUs/Button.png"></a>
+        <a href="#"><img src="asset/images/subscribe_button.png"></a>
     </div>
 </section>
 <!-- Footer -->
@@ -231,9 +261,9 @@
 
     <div class="socialnetwork">
         <ul>
-            <li class="facebook"><a href="www.facebook.com"><img src="images/facebook.png"</a></li>
-            <li class="twitter"><a href="www.twitterk.com"><img src="images/twitter.png"</a></li>
-            <li class="instagram"><a href="www.instagram.com"><img src="images/instagram.png"</a></li>
+            <li class="facebook"><a href="www.facebook.com"><img src="asset/images/facebook.png"</a></li>
+            <li class="twitter"><a href="www.twitterk.com"><img src="asset/images/twitter.png"</a></li>
+            <li class="instagram"><a href="www.instagram.com"><img src="asset/images/instagram.png"</a></li>
         </ul>
     </div>
     <div class="Resources">
