--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
         </ul>
 
         <div class="stats1">
-            <ul>
-                <li class="static">25,356</li>
-                <li class="item">Projects Done</li>
-            </ul>
-        </div>              
+                <p class="static1">25,356</p>
+                <p class="item1">Projects Done</p>
+        </div>
+        <div class="stats2">
+                <p class="static2">15,200</p>
+                <p class="item2">Buildings Done</p>
+        </div>
+        <div class="stats3">
+                <p class="static3">350+</p>
+                <p class="item3">Total Employees</p>
+        </div>             
     </div>
     <div class="deco">
         <img src="asset/images/deco.png">
@@ -65,7 +71,26 @@
            Blessing welcomed ladyship she met humoured sir<br> breeding her.Six curiosity day assurance bed necessary.
         </li>
         <li class="sec2btn"><a href="#">Explore</a></li>
-    </ul>   
+    </ul>
+    <div class="wcuflist">
+        <li class="wcuflist1"><p>01
+        <span class="wcuflist1_text">
+            And residence for met the estimable<br> disposing. Mean if he they been no hold<br> mr. Is at much do made took held help.
+        </span></p>
+    </li>
+        <li class="wcuflist2"><p>02
+            <span class="wcuflist2_text">
+                Up maids me an ample stood given.<br> Certainty say suffering his him<br> collected intention promotion.
+            </span>
+        </p>
+        </li>
+        <li class="wcuflist3"><p>03
+            <span class="wcuflist3_text">
+                Good draw knew bred ham busy his<br> hour. Ask agreed answer rather joy<br> nature admire wisdom.
+            </span>
+            </p>
+        </li>
+    </div>   
 </section>
 <!-- Our Best Enginners -->
 <section id="Employee">
