--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>             
     </div>
     <div class="deco">
-        <img src="asset/images/deco.png">
+        <img src="asset/images/deco.png" alt="decoration">
     </div>   
     <div class="partners_logo">
     <ul>
@@ -110,7 +110,7 @@
         </div>
 
         <div class="portrait1">
-            <img src="asset/images/chrisevans.png" alt="employee1">
+            <img src="asset/images/chrisevans.png" alt="chrisevans">
         </div>
         <div class="info1">
             <span class="name" style="font-weight: 500;">Chris Evans</span><br>
@@ -129,7 +129,7 @@
             <div class="list3"></div>
         </div>
         <div class="portrait2">
-            <img src="asset/images/alisonkiara.png" alt="employee2">
+            <img src="asset/images/alisonkiara.png" alt="alisonkiara">
         </div>
         <div class="info2">
             <span class="name" style="font-weight: 500;">Alison Kiara</span><br>
@@ -148,7 +148,7 @@
             <div class="list3"></div>
         </div>
         <div class="portrait3">
-            <img src="asset/images/adamgates.png" alt="employee3">
+            <img src="asset/images/adamgates.png" alt="adamgates">
         </div>
         <div class="info3">
             <span class="name" style="font-weight: 500;">Adam Gates</span><br>
@@ -159,12 +159,12 @@
     </div>
     <div class="arrowbtn">
         <div class="leftbtn">
-            <a href="#"><img src="asset/images/Icon-1.png"></a>
+            <a href="#"><img src="asset/images/Icon-1.png" alt="left arrow"></a>
         </div>
 
         <div class="rightbtn">
             <div class="rightpoint">
-                <a href="#"><img src="asset/images/Icon.png"></a>
+                <a href="#"><img src="asset/images/Icon.png" alt="right arrow"></a>
             </div>
         </div>
     </div>
@@ -186,8 +186,7 @@
     <div class="nametag"><span>Name</span></div>
     <li class="namebox">
         <form>
-            <p><input style="padding-left
-            :8px" id="name" type="text" name="name" placeholder="Maya"></p>
+            <p><input style="padding-left:8px" id="name" type="text" name="name" placeholder="Maya"></p>
         </form>
     </li>
     <li class="emailbox">
@@ -210,11 +209,11 @@
     </li>
 </ul>
     <div class="MAP">
-        <div class="Austrailia"><img src="asset/images/austrailia.png"><span>Austrailia</span></div>
-        <div class="Germany"><img src="asset/images/germany.png"><span>Germany</span></div>
-        <div class="Brazil"><img src="asset/images/brazil.png"><span>Brazil</span></div>
-        <div class="Pakistan"><img src="asset/images/pakistan.png"><span>Pakistan</span></div>
-        <div class="Canada"><img src="asset/images/canada.png"><span>Canada</span></div>
+        <div class="Austrailia"><img src="asset/images/austrailia.png" alt="Austrailia"><span>Austrailia</span></div>
+        <div class="Germany"><img src="asset/images/germany.png" alt="Germany"><span>Germany</span></div>
+        <div class="Brazil"><img src="asset/images/brazil.png" alt="Brazil"><span>Brazil</span></div>
+        <div class="Pakistan"><img src="asset/images/pakistan.png" alt="Pakistan"><span>Pakistan</span></div>
+        <div class="Canada"><img src="asset/images/canada.png" alt="Canada"><span>Canada</span></div>
     </div>
 </section>
 <!-- Lattest Blogs -->
@@ -268,9 +267,9 @@
 
     <div class="socialnetwork">
         <ul>
-            <li class="facebook"><a href="www.facebook.com"><img src="asset/images/facebook.png"</a></li>
-            <li class="twitter"><a href="www.twitterk.com"><img src="asset/images/twitter.png"</a></li>
-            <li class="instagram"><a href="www.instagram.com"><img src="asset/images/instagram.png"</a></li>
+            <li class="facebook"><a href="www.facebook.com"><img src="asset/images/facebook.png" alt="facebook"></a></li>
+            <li class="twitter"><a href="www.twitterk.com"><img src="asset/images/twitter.png" alt="twitter"></a></li>
+            <li class="instagram"><a href="www.instagram.com"><img src="asset/images/instagram.png" alt="instagram"></a></li>
         </ul>
     </div>
     <div class="Resources">
