--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
 
     <p>Shewing met parties gravity husband sex pleased. On to no kind do next feel held walk. Last<br> own loud and knew give gay four. Sentiments motionless or principles preference excellence<br> am. Literature surrounded insensible at indulgence or to admiration remarkably. Matter future<br> lovers desire marked boy use. Chamber reached do he nothing be.<br><br>
     Do in laughter securing smallest sensible no mr hastened. As perhaps proceed in in brandon of<br> limited unknown greatly. Distrusts fulfilled happiness unwilling as explained of difficult. No<br> landlord of peculiar ladyship attended if contempt ecstatic. Loud wish made on is am as hard.<br> Court so avoid in plate hence. Of received mr breeding concerns peculiar securing landlord.<br> Spot to many it four bred soon well to. Or am promotion in no departure abilities. Whatever<br> landlord yourself at by pleasure of children be.</p>
-</section>
+
+    <div class="double_quotation_mark_1"><img src="asset/images/“1.png"></div>
+    <div class="double_quotation_mark_2"><img src="asset/images/“2.png"></div>
+    </section>
 <!-- Contact Us -->
 <section id="ContactUs">
     <h2>Contact Us</h2>
